# voxtus

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: deploy.yaml
src/: audio.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  signals.rs  transcribe.rs
src/download/: mod.rs  youtube.rs
src/formats/: json.rs  mod.rs  srt.rs  txt.rs  vtt.rs
tests/: integration_tests.rs  regression_tests.rs
